--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -47,6 +47,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -240,19 +241,9 @@ export RSTUDIO_WHICH_R=/where/I/installed/to/bin/R
 open -n -a RStudio</pre>
 
 
-    <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
