--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -140,8 +140,8 @@ bool de(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
     </ul>
     <li><code>double de_par_F</code> the mutation parameter $F$ in the details section below.</li>
     <li><code>double de_par_CR</code> the crossover parameter $CR$ in the details section below.</li>
-    <li><code>arma::vec de_init_lb</code> lower bounds on the initial population; defaults to <code>init_out_vals</code> $- \ 0.5$.</li>
-    <li><code>arma::vec de_init_ub</code> upper bounds on the initial population; defaults to <code>init_out_vals</code> $+ \ 0.5$.</li>
+    <li><code>arma::vec de_initial_lb</code> lower bounds on the initial population; defaults to <code>init_out_vals</code> $- \ 0.5$.</li>
+    <li><code>arma::vec de_initial_ub</code> upper bounds on the initial population; defaults to <code>init_out_vals</code> $+ \ 0.5$.</li>
 </ul>
 
 <hr style="height:2px;border-width:0;background-color:black">
