--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -145,8 +145,8 @@ bool pso(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& val
     </ul>
     <li><code>double pso_par_c_cog</code> weight value on the 'cognitive' factor.</li>
     <li><code>double pso_par_c_soc</code> weight value on the 'social' factor.</li>
-    <li><code>arma::vec pso_init_lb</code> lower bounds on the initial population; defaults to <code>init_out_vals</code> $- \ 0.5$.</li>
-    <li><code>arma::vec pso_init_ub</code> upper bounds on the initial population; defaults to <code>init_out_vals</code> $+ \ 0.5$.</li>
+    <li><code>arma::vec pso_initial_lb</code> lower bounds on the initial population; defaults to <code>init_out_vals</code> $- \ 0.5$.</li>
+    <li><code>arma::vec pso_initial_ub</code> upper bounds on the initial population; defaults to <code>init_out_vals</code> $+ \ 0.5$.</li>
 </ul>
 
 <hr style="height:2px;border-width:0;background-color:black">
