--- a/trame.html
+++ b/trame.html
@@ -82,10 +82,11 @@
     <div class="col-md-8">
         <br>
         <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Transportation Methods for Econometrics</u></strong></h3>
-         <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/gcem" target="_blank"><img src="https://travis-ci.org/kthohr/gcem.svg?branch=master" alt="TraME Build"></a> </p> 
-         <p style="text-align: center;"><a class="github-button" href="https://github.com/TraME-Project/TraME/subscription" data-icon="octicon-eye" data-count-href="/TraME-Project/TraME/watchers" data-count-api="/repos/TraME-Project/TraME#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch TraME-Project/TraME on GitHub">Watch</a> 
-         <a class="github-button" href="https://github.com/TraME-Project/TraME" data-icon="octicon-star" data-count-href="/TraME-Project/TraME/stargazers" data-count-api="/repos/TraME-Project/TraME#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star TraME-Project/TraME on GitHub">Star</a> 
-         <a class="github-button" href="https://github.com/TraME-Project/TraME/fork" data-icon="octicon-repo-forked" data-count-href="/TraME-Project/TraME/network" data-count-api="/repos/TraME-Project/TraME#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork TraME-Project/TraME on GitHub">Fork</a></p> 
+        <p style="text-align: center;"><a href="https://travis-ci.org/TraME-Project/TraME" target="_blank"><img src="https://travis-ci.org/TraME-Project/TraME.svg?branch=master" alt="TraME Build"></a>
+        <a href="https://codecov.io/github/TraME-Project/TraME?branch=master" target="_blank"><img src="https://codecov.io/github/TraME-Project/TraME/coverage.svg?branch=master" alt="Coverage Status"></a></p> 
+        <p style="text-align: center;"><a class="github-button" href="https://github.com/TraME-Project/TraME/subscription" data-icon="octicon-eye" data-count-href="/TraME-Project/TraME/watchers" data-count-api="/repos/TraME-Project/TraME#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch TraME-Project/TraME on GitHub">Watch</a> 
+        <a class="github-button" href="https://github.com/TraME-Project/TraME" data-icon="octicon-star" data-count-href="/TraME-Project/TraME/stargazers" data-count-api="/repos/TraME-Project/TraME#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star TraME-Project/TraME on GitHub">Star</a> 
+        <a class="github-button" href="https://github.com/TraME-Project/TraME/fork" data-icon="octicon-repo-forked" data-count-href="/TraME-Project/TraME/network" data-count-api="/repos/TraME-Project/TraME#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork TraME-Project/TraME on GitHub">Fork</a></p> 
     </div>
     <div class="col-md-2">
         <a href="https://en.wikipedia.org/wiki/Leonid_Kantorovich" target="_blank"><img src="pics/trame_kantorovich.png" class="img-responsive center-block" alt="" width="150" height="150"></a>
