--- a/optimlib.html
+++ b/optimlib.html
@@ -137,6 +137,7 @@
 <ul>
     <li>Modern C++11 library of local and global optimization methods, as well as root finding techniques.</li>
     <li>Advanced derivative-free algorithms, including Differential Evolution (DE) and Particle Swarm Optimization (PSO), with state-of-the-art hybrid metaheuristics.</li>
+    <li>Constrained optimization, from simple box constraints to nonlinear constraints.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
 </ul>
 
