--- a/optimlib.html
+++ b/optimlib.html
@@ -135,10 +135,10 @@
 
 <p><strong>Features</strong></p>
 <ul>
-    <li>Modern C++11 library of local and global optimization methods, as well as root finding techniques.</li>
+    <li>Parallelized C++11 library of local and global optimization methods, and root finding techniques.</li>
     <li>Advanced derivative-free algorithms, including Differential Evolution (DE) and Particle Swarm Optimization (PSO), with state-of-the-art hybrid metaheuristics.</li>
     <li>Constrained optimization, from simple box constraints to nonlinear constraints.</li>
-    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
+    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
 </ul>
 
 <p><strong>Author</strong>: Keith O'Hara</p>
