--- a/optimlib_header.html
+++ b/optimlib_header.html
@@ -7,6 +7,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Algorithms <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="optimlib_docs_bfgs.html">BFGS</a></li>
+                    <li><a href="optimlib_docs_lbfgs.html">L-BFGS</a></li>
                     <li><a href="optimlib_docs_broyden.html">Broyden</a></li>
                     <li><a href="optimlib_docs_cg.html">Conjugate Gradient</a></li>
                     <li><a href="optimlib_docs_de.html">Differential Evolution</a></li>
