--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -66,7 +66,7 @@
             <div class="col-lg-12">
                 <ol class="breadcrumb">
                     <li><a href="http://www.kthohr.com">Home</a></li>
-                    <li><a href="r-code.html">R</a></li>
+                    <!-- <li><a href="r-code.html">R</a></li> -->
                     <li class="active">R-devel</li>
                 </ol>
             </div>
