--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        <p class="text-muted">Copyright &copy; Keith O'Hara 2017.</p>
+        <p class="text-muted">Copyright &copy; 2017 Keith O'Hara</p>
     </div>
 </footer>
