--- a/bmr.html
+++ b/bmr.html
@@ -45,6 +45,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#bmrhead").load("bmr_header.html")
             $("#myfooter").load("footer.html")
         });
     </script>
@@ -66,27 +67,7 @@ pre {
     <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a></li>
-                    <li class="active">BMR</li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">VARs<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="bmr_docs_vars_bvarm.html">BVARM</a></li>
-                            <li><a href="bmr_docs_vars_bvars.html">BVARS</a></li>
-                            <li><a href="bmr_docs_vars_bvarw.html">BVARW</a></li>
-                            <li class="divider"></li>
-                            <li><a href="bmr_docs_vars_cvar.html">CVAR</a></li>
-                        </ul>
-                    </li>
-
-                    <li><a href="bmr-replication-files.html">Replication Files</a></li>
-                </ol>
-            </div>
-        </div>
-        <!-- /.row -->
+        <div id="bmrhead"></div>
 
 
 <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Bayesian Macroeconometrics in R</u></strong></h3>
