--- a/bmr.html
+++ b/bmr.html
@@ -73,7 +73,7 @@ pre {
 <div class="row">
     <div class="col-md-2">
         <!-- <img src="pics/BMR_plot_irf.png" class="img-responsive center-block"> -->
-        <img src="pics/BMR_plot_irf.png" class="img-rounded pull-left" alt="" width="260" height="200">
+        <img src="pics/bmr_plot_irf.png" class="img-rounded pull-left" alt="" width="260" height="200">
     </div>
     <div class="col-md-8">
         <br>
@@ -87,7 +87,7 @@ pre {
     </div>
     <div class="col-md-2">
         <!-- <img src="pics/BMR_plot_bvarw.png" class="img-responsive center-block"> -->
-        <img src="pics/BMR_plot_bvarw.png" class="img-rounded pull-right" alt="" width="260" height="200">
+        <img src="pics/bmr_plot_bvarw.png" class="img-rounded pull-right" alt="" width="260" height="200">
     </div>
 </div>
 
