--- a/bmr.html
+++ b/bmr.html
@@ -93,12 +93,12 @@ pre {
 
 <br>
 
-<p>BMR (Bayesian Macroeconometrics in R) is the R interface to the Bayesian Macroeconometrics C++ library, used for estimating Bayesian Vector Autoregression (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
+<p>BMR (Bayesian Macroeconometrics in R) is an R interface to the Bayesian Macroeconometrics C++ library, used for estimating Bayesian Vector Autoregression (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
 
 <p><strong>Features</strong></p>
 <ul>
-    <li>Seamless interfacing using Rcpp modules.</li>
-    <li>Requires no knowledge of C++ on the part of the user.</li>
+    <li>Seamless and efficient OO-based interaction using Rcpp modules.</li>
+    <li>Requires no use of (or knowledge of) C++ by the user.</li>
 </ul>
 
 <p><strong>Author</strong>: Keith O'Hara</p>
@@ -106,6 +106,14 @@ pre {
 <p><strong>License</strong>: BMR is licensed under the GNU General Public License (GPL) version 2, or (at your option) any later version.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
+
+<h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
+
+<br>
+
+<ul>
+    <li>The source code is available on <a href="https://github.com/kthohr/BMR" target="_blank">GitHub</a>.</li>
+</ul>
 
 <p><strong>Package requirements</strong>: the latest versions of R (v3.30, or above), Rcpp, RcppArmadillo, ggplot2, and grid (this comes pre-packaged with R). </p>
 
@@ -116,7 +124,7 @@ install.packages("ggplot2")</pre>
 
 <hr>
 
-<h3 style="text-align: left;" id="DL"><strong style="font-size: 130%;">Download</strong></h3>
+<h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
 
 <p><a class="github-button" href="https://github.com/kthohr/bmr/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download kthohr/bmr on GitHub">Download</a></p>
 
