--- a/gcem.html
+++ b/gcem.html
@@ -108,10 +108,10 @@ pre {
 
 <p><strong>Features:</strong></p>
 <ul>
-    <li>Extensive use of <a href="http://en.cppreference.com/w/cpp/language/constexpr" target="_blank">constexpr functions</a> and recursive templates enables compile-time evaluation of math functions.</li>
+    <li>Extensive use of <a href="http://en.cppreference.com/w/cpp/language/constexpr" target="_blank">constexpr functions</a> and recursive templates enables compile-time evaluation of special math functions.</li>
     <!-- <li>Enables compile-time computation of important operations to reduce the overall runtime of a program.</li> -->
     <li>The library is written in concise C++11 constexpr format, which is also C++14 compatible.</li>
-    <li>Use of continued fraction representions minimize the number of required template iterations.</li>
+    <li>Use of continued fraction representions minimizes template iterations and achieves convergence where other libraries will fail.</li>
     <li>Extensively tested and accurate to machine precision against the C++ standard library.</li>
 </ul>
 
