--- a/statslib.html
+++ b/statslib.html
@@ -92,13 +92,15 @@ pre {
 
 <hr>
 
-<p>StatsLib is a templated C++ library for random variable generation and fast computation of statistical distribution functions.</p>
+<!-- <p>StatsLib is a templated C++ library for random variable generation and fast computation of statistical distribution functions.</p> -->
+<p>StatsLib is a templated C++ library for fast computation of statistical distribution functions.</p>
 
 <b>Features</b>
 <br>
 <ul>
-    <li>Supports the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for matrix-valued operations.</li>
-    <li>Compile-time computation of density functions, cumulative distribution functions, and quantile functions using C++11 constexpr functions and the <a href="gcem.html" target="_blank">GCE-Math library</a>.</li>
+    <li>Compile-time evaluation of density functions, cumulative distribution functions, and quantile functions using C++11 constexpr functions and the <a href="gcem.html" target="_blank">GCE-Math library</a>.</li>
+    <li>Random variable generation using a clean <strong>R</strong>-like syntax.</li>
+    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
 </ul>
 
 <br>
