--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -208,7 +208,7 @@ export PKG_CONFIG_PATH=/opt/X11/lib/pkgconfig:/usr/local/lib/pkgconfig:/usr/lib/
 
 <h3 style="text-align: left;" id="Build"><strong style="font-size: 120%;">Build and Install</strong></h3>
 
-<p>To build R-devel, use</p>
+<p>To build R-devel, run make:</p>
 <pre  class="brush: bash;">
 cd ~/Desktop/R/R-devel
 make</pre>
