--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -231,7 +231,7 @@ alias Rdevel="/where/I/installed/to/bin/R"</pre>
 <p>For example,</p>
 <pre  class="brush: bash;">
 alias Rdevel="/Users/${USER}/Desktop/R-devel/bin/R"</pre>
-<p>To run R-devel with sudo privileges, you need to also add</p>
+<p>To run R-devel with sudo privileges, you need to add</p>
 <pre  class="brush: bash;">
 alias sudo='sudo '</pre>
 
