--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -74,7 +74,8 @@
         <!-- /.row -->
 
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;">Building R-devel from Source on OSX 10.12.6</strong></h3>
+<h3 style="text-align: center;"><strong style="font-size: 130%;">Building R-devel from Source</strong></h3>
+<h3 style="text-align: center;"><strong style="font-size: 130%;">OSX 10.12.6</strong></h3>
 </br>
 
 <div class="row">
