--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -103,7 +103,7 @@
 <ul>
     <li> Get Xcode from the App Store. (The page should look something like <a href="https://itunes.apple.com/us/app/xcode/id497799835?mt=12" target="_blank">this</a>.) The latest version of Xcode should install the <b>command line tools</b> by default.</li>
     <ul>
-        <li>Open a terminal window&#8212;search spotlight for 'terminal' if you've never needed terminal/bash before&#8212;and type:</li>
+        <li>Open a terminal window&#8212;search spotlight for 'terminal' if you've never needed terminal/bash before&#8212;and run:</li>
         <pre  class="brush: bash;">
 clang++ -v</pre>
         <li>You should see something similar to</li>
