--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -123,7 +123,7 @@ cd ~/Desktop
 curl -O http://r.research.att.com/libs/gfortran-4.8.2-darwin13.tar.bz2
 sudo tar fvxz gfortran-4.8.2-darwin13.tar.bz2 -C /</pre>
 
-    <p>(The 'sudo' command requires you to enter your password&#8212;this is because we are placing files into areas that are password restricted (/usr/local).)</p>
+    <p>The 'sudo' command requires your password&#8212;this is because we are placing files into areas that are password restricted (/usr/local).</p>
     <li>We also need pkg-config, xz, and pcre:</li>
 <pre  class="brush: bash;">
 cd ~/Desktop
