--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -218,7 +218,7 @@ make</pre>
 <pre  class="brush: bash;">
 make check</pre>
 
-<p>Finally, we need to choose an install location for R-devel; I use /Users/${USER}/Desktop/R-devel, but I recommend installing to somewhere that doesn't require sudo privileges.</p>
+<p>Finally, we need to choose an install location for R-devel; I use /Users/${USER}/Desktop/R-devel; I recommend installing to somewhere that doesn't require sudo privileges.</p>
 <pre  class="brush: bash;">
 sudo make prefix=/Users/${USER}/Desktop/R-devel install</pre>
 
