--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -94,7 +94,7 @@
 
 <p>This page describes the steps involved in compiling R-devel on a Mac (OSX v10.12.6).</p>
 
-<hr>
+<hr style="height:2px;border-width:0;background-color:black">
 
 <h3 style="text-align: left;" id="Prelim"><strong style="font-size: 120%;">Preliminaries</strong></h3>
 
@@ -206,6 +206,8 @@ export PKG_CONFIG_PATH=/opt/X11/lib/pkgconfig:/usr/local/lib/pkgconfig:/usr/lib/
 	--with-blas="-framework Accelerate" --with-lapack \
 		--enable-R-shlib --enable-memory-profiling
 </pre>
+
+<hr>
 
 <h3 style="text-align: left;" id="Build"><strong style="font-size: 120%;">Build and Install</strong></h3>
 
