--- a/bmr_docs_vars_bvarm.html
+++ b/bmr_docs_vars_bvarm.html
@@ -204,7 +204,7 @@ The user can choose between two functional forms for $d(\ell)$, both index by hy
 
 <p>With $\Sigma$ fixed, the posterior distribution of $\alpha = \text{vec}(\beta)$ is given by
 \begin{equation}
-		p(\alpha | \Sigma,\mathcal{Z},Y) = \mathcal{N} \left( \widetilde{\alpha}, \widetilde{\Sigma}_{\alpha} \right),
+		p(\alpha | \Sigma,Z,Y) = \mathcal{N} \left( \widetilde{\alpha}, \widetilde{\Sigma}_{\alpha} \right),
 \end{equation}
 where
 \begin{align*}
