--- a/bmr_docs_vars_bvarw.html
+++ b/bmr_docs_vars_bvarw.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>BMR: bvarm</title>
+    <title>BMR: bvarw</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -84,10 +84,10 @@ pre {
 <br> <br>
 
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: BVAR with Minnesota Prior</strong></h4></a>
+                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">BMR: BVAR with Normal-inverse Wishart Prior</strong></h4></a>
             </div>
             <div id="collapse1" class="panel-collapse collapse">
                 <div class="panel-body">
@@ -109,7 +109,7 @@ pre {
 <p><strong>Instantiation:</strong></p>
 <pre class="brush: R;">
 # create a new object
-bvar_obj <- new(bvarm)
+bvar_obj <- new(bvarw)
 </pre>
 
 <p><strong>Fields:</strong></p>
@@ -140,10 +140,17 @@ bvar_obj <- new(bvarm)
     <li><code>alpha_pr_mean</code> prior mean of $\alpha = \text{vec}(\beta)$.</li>
     <li><code>alpha_pr_var</code> prior covariance matrix of $\alpha = \text{vec}(\beta)$.</li>
 
+    <li><code>Sigma_pr_scale</code> prior scale matrix of $\Sigma$.</li>
+    <li><code>Sigma_pr_dof</code> prior degrees of freedom of $\Sigma$.</li>
+
     <li><code>alpha_pt_mean</code> posterior mean of $\alpha = \text{vec}(\beta)$.</li>
     <li><code>alpha_pt_var</code> posterior covariance matrix of $\alpha = \text{vec}(\beta)$.</li>
 
+    <li><code>Sigma_pt_mean</code> posterior mean of $\Sigma$.</li>
+    <li><code>Sigma_pt_dof</code> posterior degrees of freedom of $\Sigma$.</li>
+
     <li><code>beta_draws</code> an array of posterior draws for $\beta$.</li>
+    <li><code>Sigma_draws</code> an array of posterior draws for $\Sigma$.</li>
 </ul>
 
 <hr>
@@ -163,23 +170,24 @@ bvar_obj$build(data_endog,data_exog,cons_term,p)
 
 <p><strong>Prior:</strong></p>
 <pre class="brush: R;">
-bvar_obj$prior(coef_prior,var_type,decay_type,HP_1,HP_2,HP_3,HP_4)
+bvar_obj$prior(coef_prior,Xi_beta,Xi_Sigma,gamma)
 </pre>
 
 <ul>
     <li><code>coef_prior</code> a $m \times 1$ vector containing the prior mean for each first own-lag coefficient.</li>
-    <li><code>var_type</code> variance type (1 or 2); see below for more details.</li>
-    <li><code>decay_type</code> decay type (1 or 2) for the <code>var_type=2</code> case.</li>
-    <li><code>HP_1,HP_2,HP_3,HP_4</code> hyperparameters; see below for more details.</li>
+    <li><code>Xi_beta</code> scaling value for the prior covariance matrix of $\beta$.</li>
+    <li><code>Xi_Sigma</code> scaling value for the prior covariance matrix of $\Sigma$.</li>
+    <li><code>gamma</code> prior degrees of freedom for $\Sigma$.</li>
 </ul>
 
 <p><strong>Gibbs sampling:</strong></p>
 <pre class="brush: R;">
-bvar_obj$gibbs(n_draws)
+bvar_obj$gibbs(n_draws,n_burnin)
 </pre>
 
 <ul>
     <li><code>n_draws</code> number of posterior draws.</li>
+    <li><code>n_draws</code> number of burnin draws.</li>
 </ul>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -188,60 +196,17 @@ bvar_obj$gibbs(n_draws)
 
 <br>
 
+The model:
+
 $$
 Y = X \beta + e
 $$
 
-<p>The Minnesota prior (also known as Litterman's prior) holds fixed $\Sigma$, the covariance matrix of the disturbance terms, during posterior sampling. 
-This simplification yields a significant decrease in computational expenditure. The standard references for this type of model are Doan, Litterman, and Sims (1983) and Litterman (1986).</p>
-
-<p>The Minnesota prior sets $\Sigma$ to be a diagonal matrix, where the diagonal elements come from equation-by-equation estimation of an AR($p$) model for each of the $m$-variables. 
-    That is, for each variable in the VAR model, we estimate the model assuming that all coefficients, except their own-lag terms (and a possible constant term), are equal to zero.<p>
-$$
-	\Sigma = \begin{bmatrix} \sigma_{1}^2 &0 & 0 & \cdots & 0 \\ 0& \sigma_2^2 & 0 & \cdots & 0  \\ 0& 0 & \sigma_3^2 &  \cdots & 0  \\ \vdots & \vdots & \ddots &  \ddots &  \\ 0& 0 & 0 &  0 & \sigma_m^2  \end{bmatrix}
-$$
-
-<p>Construction of the prior variance matrix for $\beta$ is set in one of two ways. Let $i, j \in \{ 1,\ldots, m\}$; we index the equation by $i$, and the variable by $j$. We denote lags by $\ell \in \{1, \ldots, p\}$</p>
-<ul>
-    <li><code>var_type=1</code> Koop and Korobilis (2010) define the prior covariance matrix of $\beta$ as follows:
-\begin{equation*}
-\Xi_{\beta_{i,j}} (\ell) =
-	\begin{cases}
-			&H_1 / \ell^2 \\
-			& H_2 \cdot \sigma_{i}^2 / \left( \ell^2 \cdot \sigma_{j}^2 \right) \\
-			& H_3 \cdot \sigma_{i}^2
-	\end{cases}
-\end{equation*}
-which correspond to own lags, cross-variable lags, and exogenous variables (e.g., a constant), respectively.</li>
-    <li><code>var_type=2</code> Canova (2007) defines a more general form for the decay:
-\begin{equation*}
-\Xi_{\beta_{i,j}} (\ell) =
-	\begin{cases}
-			& H_1 / d(\ell) \\
-			& H_1 \cdot H_2 \cdot \sigma_{j}^2 / \left( d(\ell) \cdot \sigma_{i}^2 \right) \\
-			& H_1 \cdot H_3
-	\end{cases}
-\end{equation*}
-which, again, correspond to own lags, cross-variable lags, and exogenous variables, respectively. $d(\ell)$ is the `decay' function.
-
-<br><br>
-
-In the Koop and Korobilis (2010) case, $d(\ell) = \ell^2$. Also, note that, for cross-equation coefficients, the ratio of the variance of each equation has been inverted. 
-<br><br>
-The user can choose between two functional forms for $d(\ell)$, both index by hyperparameter $H_4 > 0$: 
-    <ul>
-        <li><code>decay_type=1</code> harmonic decay, where $d (\ell) = \ell^{H_4}$;</li>
-        <li><code>decay_type=2</code> geometric decay, where $d (\ell) = H_4^{-\ell + 1}$.</li>
-    </ul>
-    When $H_4 = 1$, we have linear decay.
-</ul>
-
-<p>$\Xi_{\beta}$ is then vectorised, and this becomes the main diagonal to a new matrix of size $\left( (\mathbf{1}_c + q + m \cdot p) \times m \right) \times \left( (\mathbf{1}_c + q + m \cdot p) \times m \right)$, where all off-diagonal entries are set to zero.</p>
-
-<p>With $\Sigma$ fixed, the posterior distribution of $\alpha = \text{vec}(\beta)$ is given by
-\begin{equation}
-		p(\alpha | \Sigma,X,Y) = \mathcal{N} \left( \widetilde{\alpha}, \widetilde{\Sigma}_{\alpha} \right),
-\end{equation}
+The posterior kernels are given by:
+\begin{align}
+		p(\alpha | \Sigma,X,Y) &= \mathcal{N} \left( \widetilde{\alpha}, \widetilde{\Sigma}_{\alpha}  \right) \\
+		p(\Sigma | \beta,X,Y) &= \mathcal{IW} \left( \Xi_{\Sigma} + \left(Y -X \beta \right)^{\top}  \left(Y - X \beta \right), n - p + \gamma \right)
+\end{align}
 where
 \begin{align*}
 	\widetilde{\Sigma}_{\alpha}^{-1} &= \Xi_{\alpha}^{-1} + (\Sigma^{-1} \otimes X^{\top} X) \\
@@ -267,18 +232,21 @@ bvar_data <- data.matrix(USMacroData[,2:4])
 #
 
 coef_prior <- c(0.9,0.9,0.9)
+XiBeta <- 4
+XiSigma <- 1
+gamma = 4
 
-bvar_obj <- new(bvarm)
+bvar_obj <- new(bvarw)
 
 #
 
 bvar_obj$build(bvar_data,TRUE,4)
-bvar_obj$prior(coef_prior,1,1,0.5,0.5,100.0,1.0)
-bvar_obj$gibbs(10000)
+bvar_obj$prior(coef_prior,XiBeta,XiSigma,gamma)
+bvar_obj$gibbs(10000,5000)
 
-IRF(bvar_obj,20,var_names=colnames(USMacroData),save=FALSE)
-plot(bvar_obj,var_names=colnames(USMacroData),save=FALSE)
-forecast(bvar_obj,shocks=TRUE,var_names=colnames(USMacroData),back_data=10,save=FALSE)
+IRF(bvar_obj,20,var_names=colnames(bvar_data),save=FALSE)
+plot(bvar_obj,var_names=colnames(bvar_data),save=FALSE)
+forecast(bvar_obj,shocks=TRUE,var_names=colnames(bvar_data),back_data=10,save=FALSE)
 </pre>
 
     </div>
