--- a/bmr_docs_vars_bvarm.html
+++ b/bmr_docs_vars_bvarm.html
@@ -57,7 +57,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
-            $("#bmrhead").load("bmrlib_header.html")
+            $("#bmrhead").load("bmr_header.html")
             $("#myfooter").load("footer.html")
         });
     </script>
