--- a/bmr_header.html
+++ b/bmr_header.html
@@ -12,7 +12,7 @@
                     <li class="divider"></li>
                     <li><a href="bmr_docs_vars_cvar.html">cvar</a></li>
                     <li class="divider"></li>
-                    <li><a href="bmr_docs_vars_bvartvp.html">cvar</a></li>
+                    <li><a href="bmr_docs_vars_bvartvp.html">bvartvp</a></li>
                 </ul>
             </li>
         </ol>
