--- a/navbar.html
+++ b/navbar.html
@@ -70,7 +70,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="links.html">Links</a>
+                                <!-- <a href="links.html">Links</a> -->
+                                <a href="#">Links</a>
                             </li>
                         </ul>
                     </li>
