--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -174,7 +174,7 @@ bool pso(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& val
     <li><strong>Reduce $w$ and update weights </strong></li>
 </ul>
 
-<p>The algorithm stops when the relative improvement in the objective function is less than <code>err_tol</code> between <code>de_check_freq</code> number of generations, or when the total number of 'generations' exceeds a desired (or default) value.</p>
+<p>The algorithm stops when the relative improvement in the objective function is less than <code>err_tol</code> between <code>pso_check_freq</code> number of generations, or when the total number of 'generations' exceeds a desired (or default) value.</p>
 
 <hr>
 
